Fix: Clean up project structure and optimize Vercel deployment
- Remove duplicate files from root directory
- Clean up invalid file paths
- Update vercel.json with explicit configuration
- Add project name to Vercel config
- Update page title to 'MVR Auto-Approval System'
- Ensure proper React app structure for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "name": "mvr-auto-approval",
   "builds": [
     {
       "src": "package.json",
@@ -18,5 +19,7 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "functions": {},
+  "trailingSlash": false
 }
