Fix vercel.json configuration - remove conflicting builds/functions properties

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
-  "version": 2,
-  "name": "mvr-auto-approval",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
   "routes": [
     {
       "src": "/static/(.*)",
@@ -19,7 +10,5 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "functions": {},
-  "trailingSlash": false
+  ]
 }
