Fix Vercel manifest.json 401 error
- Add explicit routes for static files (manifest.json, favicon.ico, etc.)
- Prevent static files from being redirected through React app auth
- Update manifest.json with proper MVR app branding
- Ensure PDF worker and other assets are served correctly

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,30 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/logo192.png",
+      "dest": "/logo192.png"
+    },
+    {
+      "src": "/logo512.png",
+      "dest": "/logo512.png"
+    },
+    {
+      "src": "/robots.txt",
+      "dest": "/robots.txt"
+    },
+    {
+      "src": "/pdf.worker.min.mjs",
+      "dest": "/pdf.worker.min.mjs"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
