--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MVR Auto-Approval",
+  "name": "MVR Auto-Approval System - Moon Valley Nursery",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#1f2937",
+  "background_color": "#ffffff",
+  "description": "Automated MVR evaluation system for driver approval based on Moon Valley Nursery standards"
 }
